--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -1,5 +1,5 @@
 .margin-nav {
-  margin-top: 3%;
+  /* margin-top: 3%; */
 }
 
 .centered-nav {
@@ -11,4 +11,11 @@
   /* background-color: red; */
   width: 50%;
   justify-content: space-between;
+}
+
+
+.topnav {
+  background-color:brown;
+  width: 100%;
+  /* width: 100%; */
 }
