--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -3,39 +3,77 @@
 } */
 
 .home-disposition {
-  display: grid;
+  display: flex;
   gap: 3%;
-  grid-template-columns: 1fr 1fr;
-  /* grid-template-rows:1fr; */
-  /* gap: 20%; */
   /* background-color: rgb(220, 162, 17); */
-  /* height: 89vh; */
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
   height: 89vh;
-  /* align-items: center; */
-  grid-column: 2 / 13;
-  grid-row: 2 / 13;
-  align-items: center;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  align-items:center;
 }
 
 
 .home-left {
   /* background-color: red; */
-  grid-column: 1 / 2;
-  height: 60%;
-  font-size: 2em;
-  line-height: 1;
   display: flex;
+  flex-direction: column;
+  font-family: 'Yeseva One', serif;
+  height: 60%;
+  width: 50%;
+  color: #1a1818;
+  justify-content: space-between;
+}
+
+.presentation {
+  /* grid-row: 1 / 2;
+  grid-column: 1 / 2; */
+  line-height: 0.9;
+  font-size: 5.9em;
+  margin: 0;
+}
+
+.presentation p {
+  margin: 0;
+}
+
+/* .separation {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  border-bottom: 1px solid #1a1818;
+  width: 50%;
+  height: 30%;
+} */
+
+.home-right {
+  /* display: flex;
+  flex-direction: column;*/
+  font-family: 'Yeseva One', serif;
+  height: 60%;
+  width: 50%;
+}
+
+.presentation-content {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #1a1818;
+  text-align: justify;
   align-items: center;
 }
 
-.home-right {
+.presentation-content p {
+  padding: 2%;
+  margin: 0;
+}
+
+.pic {
   /* background-color: cadetblue; */
+  /* grid-row: 1 / 2; */
   background-image: url('./photos/moi_01.jpg');
-  grid-column: 2 / 3;
-  height: 60%;
+  /* grid-column: 2 / 3; */
+  /* width: 50%; */
+  height: 100%;
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
