--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -1,7 +1,8 @@
 .leftnav {
-  height: 88vh;
+  top: 0;
+  height: 100%;
   width: 5%;
-  /* background-color: aquamarine; */
+  background-color: aquamarine;
   writing-mode: vertical-rl;
   transform: rotate(180deg);
   /* text-align: center; */
