--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -15,7 +15,7 @@
 
 
 .home-left {
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   flex-direction: column;
   font-family: 'Yeseva One', serif;
