--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -5,7 +5,7 @@
 .home-disposition {
   display: flex;
   gap: 3%;
-  background-color: rgb(220, 162, 17);
+  /* background-color: rgb(220, 162, 17); */
   height: 89vh;
   width: 70%;
   margin-left: 15%;
