--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -1,27 +1,39 @@
 .leftnav {
   top: 0;
-  height: 100%;
+  /* height: 100%; */
   width: 5%;
   /* background-color: aquamarine; */
   writing-mode: vertical-rl;
   transform: rotate(180deg);
   /* text-align: center; */
   position: absolute;
+  /* overflow: hidden; */
+  /* background-color: blue; */
   overflow: hidden;
-  white-space: nowrap;
-}
-
-.scrolling-wrapper {
-  text-decoration: none;
-}
-
-.scrolling-text {
-  height: 100%;
   display: flex;
-  justify-content: space-between;
+  text-align: center;
+  gap: 7rem;
+  height: 100%;
 }
 
 .scroll-item {
   text-decoration: none;
   color: var(--font-color);
+  /* background-color: blue; */
+  /* background-color: cadetblue; */
+}
+
+.leftnav ul {
+  list-style: none;
+  flex-shrink: 0;
+  min-height: 100%;
+  display: flex;
+  justify-content: space-between;
+  animation: scroll 10s linear infinite;
+}
+
+@keyframes scroll {
+  to {
+    transform: translateY(calc(-100% - 130px));
+  }
 }
