hover on sidebar elements

--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -19,6 +19,7 @@
 .scroll-item {
   text-decoration: none;
   color: var(--font-color);
+  display: inline-block;
   /* background-color: blue; */
   /* background-color: cadetblue; */
 }
