--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   background-color: var(--background-color);
   height: 100%;
   color: var(--font-color);
+  overflow-y: hidden;
 }
 
 code {
