--- a/src/assets/general_disposition.css
+++ b/src/assets/general_disposition.css
@@ -1,5 +1,5 @@
 .general-disposition {
-  background-color: rgb(220, 162, 17);
+  /* background-color: rgb(220, 162, 17); */
   height: 89vh;
   width: 70%;
   margin-left: 15%;
