--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -1,24 +1,48 @@
 .project-disposition {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   gap: 3%;
 }
 
 .work-infos {
   color: var(--font-color);
-  height: 100%;
-  width: 100%;
-  background-color: red;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  /* background-color: red; */
 }
 
+
 .work-list {
+  display: flex;
   height: 100%;
   width: 100%;
-  background-color: blue;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  gap: 3%;
+  /* background-color: aqua; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+.video-container {
+  width: 80%;
+  height: 80%;
+  /* background-color: yellow; */
+  display: grid;
+  border-radius: 5px;
+  overflow: hidden;
+  /* border-radius: 5px; */
+}
+
+
+.video-container video {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px; /* Arrondi de la vidéo */
+  object-fit: cover;
+}
+
+.filmdash-project {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
