--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -1,34 +1,31 @@
 .project-disposition {
+  /* background-color: chocolate; */
+}
+
+.project-entete {
+  margin-top: 3%;
+  margin-bottom: 5%;
+  text-align: center;
+}
+
+.project-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 3%;
-}
-
-.work-infos {
-  color: var(--font-color);
-  /* background-color: red; */
-}
-
-
-.work-list {
-  display: flex;
-  height: 100%;
+  border-radius: 5px;
+  /* background-color:cadetblue; */
   width: 100%;
-  gap: 3%;
-  /* background-color: aqua; */
-  /* justify-content: center; */
-  /* align-items: center; */
+  height: 100%;
+  gap: 5%;
+  overflow-y: scroll;
 }
 
 .video-container {
-  width: 80%;
+  width: 90%;
   height: 80%;
   /* background-color: yellow; */
   display: grid;
   border-radius: 5px;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* border-radius: 5px; */
 }
 
