--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -25,16 +25,22 @@
   /* background-color: yellow; */
   display: grid;
   border-radius: 5px;
-  /* overflow: hidden; */
-  /* border-radius: 5px; */
 }
-
 
 .video-container video {
   width: 100%;
   height: 100%;
   border-radius: 5px; /* Arrondi de la vidéo */
   object-fit: cover;
+  /* transition: opacity 0.3s ease; */
+}
+
+.video-container:hover video {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px; /* Arrondi de la vidéo */
+  object-fit: cover;
+  /* filter: brightness(50%); */
 }
 
 .filmdash-project {
@@ -42,4 +48,27 @@
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
+}
+
+.description-hover {
+  color: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* background-color: aqua; */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%)
+}
+
+.description-hover h1 {
+  font-family: "Yeseva One", serif;
+  font-weight: 800;
+  text-align: center;
+  display: inline-block;
+}
+
+.description-hover a {
+  text-decoration: none;
+  color: rgb(227, 227, 227);
+  display: inline-block;
 }
