--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-family: 'Fira Sans', sans-serif, 'Yeseva One', serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Droid Sans', 'Helvetica Neue';
+    'Ubuntu', 'Cantarell', 'Droid Sans', 'Helvetica Neue', "Playfair Display", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background-color);
