firt part infos displayed

--- a/src/assets/general_disposition.css
+++ b/src/assets/general_disposition.css
@@ -1,6 +1,6 @@
 .general-disposition {
-  /* background-color: rgb(220, 162, 17); */
-  height: 74.8vh;
+  /* background-color: rgb(180, 179, 179); */
+  /* height: 74.8vh; */
   width: 70%;
   margin-left: 15%;
   margin-right: 15%;
