--- a/src/assets/banner.css
+++ b/src/assets/banner.css
@@ -1,8 +1,14 @@
 .banner-filmdash {
-  background-image: url('./photos/projector.jpg');
+  /* background-image: url('./photos/projector.jpg'); */
+  margin-top: 2%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.2)), url('./photos/projector.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
-  filter: brightness(70%);
+  display: flex;
+  flex-direction: column;
+  gap: 4%;
+  justify-content: center;
+  align-items: center;
 }
