--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -1,21 +1,71 @@
-.filmdash h1 {
-  position: absolute;
-  /* background-color: aqua; */
-  font-family: "Yeseva One", serif;
-  color: white;
-  right: 45%;
-  top: 35%;
-  z-index: 10;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+.filmdash {
+  /* background-color: rgb(217, 255, 255); */
 }
 
-.filmdash h4 {
-  position: absolute;
-  /* background-color: blue; */
+.banner-filmdash h1 {
+  font-family: "Yeseva One", serif;
+  color: white;
+}
+
+.banner-filmdash h4 {
   color: white;
   font-family: "Yeseva One", serif;
-  z-index: 10;
-  right: 41.5%;
-  top: 45%;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
+
+.about {
+  margin-top: 10%;
+  font-weight: 300;
+  font-size: 2.5em;
+  text-transform: uppercase;
+}
+
+.intro-filmdash {
+  display: flex;
+  justify-content: center;
+  gap: 3%;
+  margin-top: 7%;
+  height: 55vh;
+}
+
+.presentation-picture-filmdash {
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.3)), url('./photos/FILMDASH_SCREEN.png');
+  background-color: rgb(210, 249, 190);
+  border-radius: 5px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 30%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.text-presentation-filmdash {
+  /* background-color: rgb(190, 222, 249); */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  text-align: justify;
+}
+
+.begin-presentation-filmdash {
+  /* background-color: brown; */
+  font-size: 2em;
+  font-weight: 600;
+  border: 1px var(--font-color) solid;
+  padding: 2%;
+}
+
+.begin-presentation-filmdash p {
+  margin: 0;
+}
+
+/* .end-presentation-filmdash {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.end-presentation-filmdash p {
+  margin: 0;
+} */
