--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -65,7 +65,7 @@
   font-weight: 800;
   text-align: center;
   display: inline-block;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+  /* text-shadow: 2px 4px 3px rgba(0,0,0,0.3); */
 }
 
 .description-hover a {
