--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -24,7 +24,6 @@
 
 .intro-filmdash {
   display: flex;
-  justify-content: center;
   gap: 3%;
   margin-top: 7%;
   height: 55vh;
@@ -32,7 +31,6 @@
 
 .presentation-picture-filmdash {
   background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.3)), url('./photos/FILMDASH_SCREEN.png');
-  background-color: rgb(210, 249, 190);
   border-radius: 5px;
   background-position: center;
   background-repeat: no-repeat;
@@ -48,15 +46,16 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: center;
   text-align: justify;
 }
 
 .begin-presentation-filmdash {
   /* background-color: brown; */
   font-size: 2em;
-  font-weight: 600;
-  border: 1px var(--font-color) solid;
+  font-weight: 200;
+  border-top: 1px var(--font-color) solid;
+  border-bottom: 1px var(--font-color) solid;
   padding: 2%;
 }
 
@@ -64,11 +63,45 @@
   margin: 0;
 }
 
-/* .end-presentation-filmdash {
-  margin: 0;
-  text-transform: uppercase;
+.development-filmdash {
+  display: flex;
+  gap: 5%;
+  margin-top: 10%;
+  height: 45vh;
+
 }
 
-.end-presentation-filmdash p {
+.development-picture-filmdash {
+  background-image: url('./photos/web_work.jpg');
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  filter: grayscale(100%);
+  border-radius: 5px;
+}
+
+.development-text-filmdash {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* background-color: blue; */
+  justify-content: space-between;
+  font-size: 1.5em;
+  font-weight: 200;
   margin: 0;
-} */
+  padding: 0;
+  text-align: justify;
+  align-items: end;
+}
+
+.development-text-filmdash p {
+  margin: 0;
+}
+
+.border-development-filmdash {
+  border: 0.5px black solid;
+  width: 60%;
+}
