--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -123,7 +123,7 @@
 /* FUNCTION SECTION */
 
 .phones-image-function-filmdash {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   display: flex;
   justify-content: center;
   border-radius: 10px;
@@ -135,39 +135,40 @@
 .preferences, .selection, .watchlist {
   height: 100%;
   width: 100%;
-  /* background-color: brown; */
+  background-color: brown;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 7px;
   opacity: 100%;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  transition: transform 0.3s ease;
 }
 
-.preferences:hover,
-.selection:hover,
-.watchlist:hover {
-  transform: scale(1.05);
-}
+/* .preferences-video-container,
+.selection-video-container,
+.watchlist-video-container {
+  height: 20px;
+  width: 50%;
+  display: grid;
+} */
 
 .preferences-video-container video,
 .selection-video-container video,
 .watchlist-video-container video {
   width: 100%;
-  height: 100%;
+  height: 48vh;
   border-radius: 5px; /* Arrondi de la vidéo */
   object-fit: cover;
-  transition: transform 0.3s ease;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .preferences-video-container:hover video,
 .selection-video-container:hover video,
 .watchlist-video-container:hover video {
   width: 100%;
-  height: 100%;
+  height: 48vh;
   border-radius: 5px; /* Arrondi de la vidéo */
   object-fit: cover;
-  filter: brightness(0.8) contrast(1) saturate(0.8);
-  transform: scale(1.05);
+  filter: brightness(0.7) contrast(1) saturate(0.8);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
