--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -7,11 +7,11 @@
 
 .banner-filmdash h1 {
   font-family: "Yeseva One", serif;
-  color: white;
+  color: rgb(237, 237, 237);
 }
 
 .banner-filmdash h4 {
-  color: white;
+  color: rgb(237, 237, 237);
   font-family: "Yeseva One", serif;
 }
 
@@ -91,7 +91,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  filter: grayscale(100%);
+  filter: grayscale(100%) brightness(0.88);
   clip-path: polygon(0 0, 75% 0%, 100% 21%, 100% 79%, 26% 100%, 0 71%);
 }
 
@@ -171,4 +171,53 @@
   object-fit: cover;
   filter: brightness(0.7) contrast(1) saturate(0.8);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.text-function-filmdash {
+  display: flex;
+  margin-top: 3%;
+  /* background-color: brown; */
+  width: 100%;
+  height: 13vh;
+}
+
+.first-function-filmdash,
+.second-function-filmdash,
+.third-function-filmdash {
+  text-align: center;
+  /* text-transform: uppercase; */
+  font-weight: 300;
+  height: 100%;
+  border: 0.8px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.first-function-filmdash p,
+.second-function-filmdash p,
+.third-function-filmdash p {
+  display: inline-block;
+  width: 100%;
+  letter-spacing: 0.1em;
+  margin: 0;
+  padding: 0;
+  /* background-color: blue; */
+}
+
+.first-function-filmdash {
+ /* background-color: blueviolet; */
+ margin-right: 10%;
+ margin-left: 10.5%;
+ width: 19.5%;
+}
+
+.second-function-filmdash {
+  margin-right: 10%;
+  width: 19.8%;
+}
+
+.third-function-filmdash {
+  width: 19.65%;
 }
