--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -122,6 +122,10 @@
 
 /* FUNCTION SECTION */
 
+.caroussel-container-filmdash {
+  background-color: blueviolet;
+}
+
 .phones-image-function-filmdash {
   /* background-color: aquamarine; */
   display: flex;
