bootstrap interference bug fixed

--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -1,6 +1,6 @@
 .filmdash {
   /* background-color: rgb(217, 255, 255); */
-  font-family: 'Fira Sans', sans-serif;
+  /* font-family: 'Fira Sans', sans-serif; */
 }
 
 
