--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -1,27 +1,45 @@
 
 
 .home-home {
-  background-color: red;
+  /* background-color: red; */
   height: 89vh;
   display: flex;
 }
 
 
 .home-left {
-  background-color: darkgoldenrod;
+  /* background-color: darkgoldenrod; */
   display: flex;
   flex-direction: column;
   font-family: 'Yeseva One', serif;
-  width: 40%;
+  width: 50%;
   color: #1a1818;
+  margin-top: 5%;
+}
 
-  /* justify-content: space-between; */
+.photo-home {
+  height: 50%;
+  width: 60%;
+  background-image: url('../assets/photos/moi_01.jpg');
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 8px;
+  /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); */
+}
+
+.home-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 70%;
+  /* background-color: aquamarine; */
 }
 
 
 .presentation {
-  /* grid-row: 1 / 2;
-  grid-column: 1 / 2; */
   line-height: 0.9;
   font-size: 5.9em;
   margin: 0;
@@ -29,14 +47,6 @@
 
 .presentation p {
   margin: 0;
-}
-
-.home-right {
-  height: 100%;
-  width: 60%;
-  stroke: #bf4d00;
-  /* padding: 4%; */
-  background-color: aqua;
 }
 
 .presentation-content {
@@ -50,17 +60,4 @@
 .presentation-content p {
   padding: 2%;
   margin: 0;
-}
-
-.pic {
-  /* background-color: cadetblue; */
-  /* grid-row: 1 / 2; */
-  background-image: url('./photos/moi_01.jpg');
-  /* grid-column: 2 / 3; */
-  /* width: 50%; */
-  height: 100%;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
