--- a/src/assets/caroussel.css
+++ b/src/assets/caroussel.css
@@ -1,5 +1,35 @@
 .caroussel-img {
   height: 80vh;
-  object-fit: cover;
+  /* object-fit: cover; */
   padding: 2%;
+}
+
+.img-one {
+  filter: brightness(75%);
+}
+
+.img-two {
+  filter: brightness(55%);
+}
+
+.img-three {
+  filter: brightness(60%);
+}
+
+.caroussel-test {
+  display: flex;
+  z-index: 400;
+  color: var(--background-color);
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  font-family: 'Yeseva One', serif;
+  font-weight: 500;
+  height: 100%;
+  width: 100%;
+}
+
+.caroussel-test h3 {
+  font-size: 2.5em;
+
 }
