--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -1,10 +1,9 @@
 
-
 .home-home {
-  height: 89vh;
+  /* height: 89vh; */
+  /* background-color: aqua; */
   display: flex;
 }
-
 
 .home-left {
   /* background-color: darkgoldenrod; */
@@ -74,4 +73,12 @@
   /* background-color: rgb(255, 255, 255); */
   width: 29.2%;
   height: 7.47%;
+}
+
+.button-about {
+  /* background-color: aqua; */
+  height: 38vh;
+  /* width: 41.5%; */
+  display: flex;
+  align-items: center;
 }
