--- a/src/assets/draw.css
+++ b/src/assets/draw.css
@@ -1,8 +1,8 @@
-.boucle-gauche,
+/* .boucle-gauche,
 .lunette-deux,
 .boucle-droite {
   position: absolute;
-  /* background-color: aqua; */
+
 }
 
 .lunette-deux {
@@ -19,3 +19,7 @@
   top: 63%;
   left:79%;
 }
+
+.test {
+  background-color: red;
+} */
