--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -1,18 +1,20 @@
 
 .home-home {
-  /* height: 89vh; */
-  background-color: aqua;
+  height: 89vh;
+  /* background-color: aqua; */
   display: flex;
+  align-items: center;
 }
 
 .home-left {
-  background-color: darkgoldenrod;
+  /* background-color: darkgoldenrod; */
   display: flex;
   flex-direction: column;
   font-family: 'Yeseva One', serif;
   width: 50%;
+  height: 85%;
   color: #1a1818;
-  margin-top: 5%;
+  /* margin-top: 5%; */
 }
 
 .photo-home {
@@ -29,11 +31,10 @@
 
 .home-right {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+  justify-content: end;
+  height: 60%;
   width: 70%;
-  background-color:burlywood;
+  /* background-color:burlywood; */
 }
 
 
@@ -76,9 +77,8 @@
 }
 
 .button-about {
-  background-color: rgb(63, 75, 75);
-  height: 38vh;
-  /* width: 41.5%; */
+  /* background-color: rgb(63, 75, 75); */
+  height: 100%;
   display: flex;
   align-items: center;
 }
