--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -76,15 +76,9 @@
   height: 7.47%;
 }
 
-.button-about {
+.button-projects {
   /* background-color: rgb(63, 75, 75); */
   height: 100%;
   display: flex;
   align-items: center;
-}
-
-.about {
-  width: 100%;
-  height: 100vh;
-  background-color: aquamarine;
 }
