--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -224,7 +224,7 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-  border: black 0.5px solid;
+  border: black 1px solid;
   border-radius: 2px;
   padding: 20px;
 }
@@ -235,4 +235,12 @@
  /* background-color: rebeccapurple; */
  margin: 0;
  text-align: center;
+}
+
+.button-filmdash-page {
+  /* background-color: aqua; */
+  height: 40vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
