--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -19,7 +19,7 @@
 .gap-section {
   display: flex;
   flex-direction: column;
-  gap: 20vh;
+  gap: 23vh;
 }
 
 /* ABOUT SECTION */
@@ -53,7 +53,6 @@
 /* Content ABOUT SECTION */
 
 .intro-filmdash {
-  /* background-color: bisque; */
   display: flex;
   gap: 3%;
   height: 55vh;
@@ -153,11 +152,9 @@
   text-transform: uppercase;
   text-align: center;
   margin: 0;
-  /* background-color: blue; */
 }
 
 .language-used ul {
-  /* background-color: bisque; */
   height: 20vh;
   display: flex;
   justify-content: space-between;
@@ -170,18 +167,30 @@
 .language-used li {
   margin: 0;
   padding: 0;
-  /* height: 100%; */
   width: 10%;
-  /* background-color: blue; */
   display: inline;
 }
 
 /* FUNCTION SECTION */
 
+.using {
+  height: 180vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .function-title-filmdash {
-  margin-top: 20%;
   color: var(--font-color);
   text-align: center;
+  margin-bottom: 5%;
+}
+
+.every-function-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
 }
 
 /* Title Function*/
@@ -190,13 +199,14 @@
   font-weight: 300;
   font-size: 2.5em;
   text-transform: uppercase;
+  margin: 0;
 }
 
 /* Caroussel settings */
 
 .caroussel-container-filmdash {
-  margin-top: 8%;
   position: relative;
+
 }
 
 .border-caroussel-left {
@@ -220,10 +230,9 @@
 }
 
 .separation-function {
-  margin-top: 12%;
   display: flex;
   justify-content: center;
-  /* background-color: red; */
+
 }
 
 .line-separation {
@@ -234,10 +243,8 @@
 .function-filmdash {
   display: flex;
   justify-content: space-between;
-  /* background-color: red; */
   margin-left: 2%;
   margin-right: 2%;
-  margin-top: 12%;
 }
 
 .preferences-container,
@@ -292,9 +299,8 @@
 }
 
 .button-filmdash-page {
-  /* background-color: aqua; */
-  height: 40vh;
+  /* height: 40vh; */
+  margin-bottom: 23vh;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
 }
