--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -1,75 +1,65 @@
 .project-disposition {
-  /* background-color: chocolate; */
+      /* background-color: chocolate; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7vh;
 }
+
+/* Title projects */
 
 .project-entete {
-  margin-top: 3%;
-  margin-bottom: 5%;
   text-align: center;
+  /* background-color: aqua; */
+  width: 100%;
+  padding-top: 5%;
+  color: var(--font-color);
 }
+
+.project-entete h2 {
+  font-size: 2.5em;
+  font-weight: 300;
+  font-family: 'Yeseva One', serif;
+  margin: 0;
+  padding: 0;
+}
+
+/* Project-container */
 
 .project-container {
+  width: 100%;
   display: flex;
   justify-content: center;
-  border-radius: 5px;
-  /* background-color:cadetblue; */
-  width: 100%;
-  height: 100%;
-  gap: 5%;
-  overflow-y: scroll;
-}
-
-.video-container {
-  width: 90%;
-  height: 80%;
-  /* background-color: yellow; */
-  display: grid;
-  border-radius: 5px;
-}
-
-.video-container video {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px; /* Arrondi de la vidéo */
-  object-fit: cover;
-  /* transition: opacity 0.3s ease; */
-}
-
-.video-container:hover video {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px; /* Arrondi de la vidéo */
-  object-fit: cover;
-  /* filter: brightness(50%); */
+  align-items: center;
 }
 
 .filmdash-project {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 5px;
-}
-
-.description-hover {
-  color: white;
-  height: 100%;
+  background-image: url('../assets/photos/cover_filmdash.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  /* background-color: aqua; */
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%)
+  align-items: center;
+  width: 70%;
+  height: 55vh;
+  border-radius: 7px;
 }
 
-.description-hover h1 {
-  font-family: "Yeseva One", serif;
-  font-weight: 800;
+.filmdash-project:hover {
+  cursor: pointer;
+}
+
+.filmdash-project h3 {
+  /* background-color: blue; */
+  z-index: 10;
   text-align: center;
-  display: inline-block;
-  /* text-shadow: 2px 4px 3px rgba(0,0,0,0.3); */
+  padding: 0;
+  margin: 0;
+  font-size: 3em;
+  color: rgb(255, 255, 255);
 }
 
-.description-hover a {
+.filmdash-project a {
   text-decoration: none;
-  color: rgb(227, 227, 227);
-  display: inline-block;
 }
