--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 7vh;
+    gap: 10vh;
 }
 
 /* Title projects */
@@ -34,32 +34,57 @@
 }
 
 .filmdash-project {
-  background-image: url('../assets/photos/cover_filmdash.jpg');
-  background-position: center;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.13)), url('../assets/photos/cover_filmdash.jpg');
+  background-position: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70%;
-  height: 55vh;
+  width: 65%;
+  height: 50vh;
   border-radius: 7px;
+  transition: all 0.3s ease;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+
 
 .filmdash-project:hover {
   cursor: pointer;
+  background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.2)), url('../assets/photos/cover_filmdash.jpg');
+  background-position: 100%;
+  background-size: cover;
+  scale: 1.02;
 }
+
 
 .filmdash-project h3 {
   /* background-color: blue; */
-  z-index: 10;
   text-align: center;
   padding: 0;
   margin: 0;
-  font-size: 3em;
-  color: rgb(255, 255, 255);
+  font-size: 2.5em;
+  color: #ffe374;
+  /* text-transform: uppercase; */
+  font-family: 'Yeseva One', sans-serif;
 }
 
 .filmdash-project a {
   text-decoration: none;
+  width: 100%;
+  height: 100%;
+  transform: translateY(5%);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  transition: all 0.3s ease ;
+}
+
+.filmdash-project a:hover {
+  opacity: 1;
+  transform: translateY(0%);
 }
