--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -32,6 +32,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background-color: #ffe374; */
+}
+
+.filmdash-container {
+  width: 75%;
 }
 
 .filmdash-project {
