--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -29,6 +29,7 @@
 
 .project-container {
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,11 +37,12 @@
 }
 
 .filmdash-container {
-  width: 75%;
+  width: 100%;
+  /* background-color: aliceblue; */
 }
 
 .filmdash-project {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.13)), url('../assets/photos/cover_filmdash.jpg');
+  /* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.13)), url('../assets/photos/cover_filmdash.jpg');
   background-position: 100%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -51,17 +53,23 @@
   height: 50vh;
   border-radius: 7px;
   transition: all 0.3s ease;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  height: 55vh;
 }
 
 
-.filmdash-project:hover {
+/* .filmdash-project:hover {
   cursor: pointer;
   background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.2)), url('../assets/photos/cover_filmdash.jpg');
   background-position: 100%;
   background-size: cover;
   scale: 1.02;
-}
+} */
 
 
 .filmdash-project h3 {
