--- a/src/assets/tv_container.css
+++ b/src/assets/tv_container.css
@@ -1,6 +1,8 @@
 .tv-container {
-  /* background-color: aqua; */
+  position: absolute;
+  object-fit: cover;
   width: 100%;
-  border-radius: 7px;
-
+  height: 100%;
+  padding: 9%;
+  margin: 0;
 }
