--- a/src/assets/tv_container.css
+++ b/src/assets/tv_container.css
@@ -1,8 +1,7 @@
 .tv-container {
   position: absolute;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  padding: 9%;
+  width: 75%;
+  height: 75%;
   margin: 0;
+  /* background-color: aqua; */
 }
