--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -1,16 +1,13 @@
 .project-disposition {
-      /* background-color: chocolate; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* gap: 10vh; */
 }
 
 /* Title projects */
 
 .project-entete {
   text-align: center;
-  /* background-color: aqua; */
   width: 100%;
   padding-top: 2%;
   color: var(--font-color);
@@ -33,21 +30,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: #ffe374; */
-}
-
-.filmdash-container {
-  /* width: 100%; */
-  /* background-color: red; */
-}
-
-.filmdash-project {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75%;
-  /* height: 55vh; */
 }
 
 
@@ -60,18 +42,24 @@
 } */
 
 
-.filmdash-project h3 {
+.filmdash-project h4 {
   /* background-color: blue; */
-  text-align: center;
+  display: flex;
+  z-index: 0;
+  align-items: center;
+  /* height: 30%; */
+  position: absolute;
+  /* text-align: center; */
   padding: 0;
   margin: 0;
-  font-size: 2.5em;
+  font-size: 3em;
   color: #ffe374;
-  /* text-transform: uppercase; */
-  font-family: 'Yeseva One', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  /* font-family: 'Yeseva One', sans-serif; */
 }
 
-.filmdash-project a {
+/* .filmdash-project a {
   text-decoration: none;
   width: 100%;
   height: 100%;
@@ -84,7 +72,7 @@
   margin: 0;
   padding: 0;
   transition: all 0.3s ease ;
-}
+} */
 
 .filmdash-project a:hover {
   opacity: 1;
