--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -33,76 +33,35 @@
 }
 
 
-/* .filmdash-project:hover {
-  cursor: pointer;
-  background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.2)), url('../assets/photos/cover_filmdash.jpg');
-  background-position: 100%;
-  background-size: cover;
-  scale: 1.02;
-} */
-
-
 .filmdash-project h4 {
   /* background-color: blue; */
+  overflow: hidden;
+  -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: black;
   display: flex;
-  z-index: 0;
+  z-index: 1;
   align-items: center;
-  /* height: 30%; */
+  justify-content: center;
+  text-align: center;
   position: absolute;
-  /* text-align: center; */
   padding: 0;
   margin: 0;
   font-size: 3em;
-  color: #ffe374;
+  color: #ffe372f0;
   text-transform: uppercase;
   letter-spacing: 0.3em;
-  /* font-family: 'Yeseva One', sans-serif; */
-}
-
-/* .filmdash-project a {
-  text-decoration: none;
   width: 100%;
   height: 100%;
-  transform: translateY(5%);
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  transition: all 0.3s ease ;
-} */
+  font-family: 'Yeseva One', sans-serif;
+  font-family: "Limelight", serif;
+  text-shadow: 2px 4px 10px rgba(0,0,0,0.2);
+  transition: 0.2s;
+  opacity: 50%;
+}
 
-.filmdash-project a:hover {
+.filmdash-project h4:hover {
+  scale: 1.1;
+  width: 91%;
+  height: 91%;
   opacity: 1;
-  transform: translateY(0%);
-}
-
-.line-top {
-  /* background-color: red; */
-}
-
-.line-bottom {
-
-}
-
-.line-right {
-  /* background-color: rebeccapurple; */
-  position: absolute;
-  top: 0;
-  left: 72.7%;
-  z-index: 10;
-}
-
-.line-left {
-  /* background-color: rebeccapurple; */
-  position: absolute;
-  left: 27.2%;
-  top: 0;
-}
-
-.border-rect {
-  /* stroke-dasharray: 500;
-  stroke-dashoffset: 1000; */
 }
