--- a/src/assets/background_filmdash_button.css
+++ b/src/assets/background_filmdash_button.css
@@ -1,4 +1,4 @@
-.background-filmdash-button {
+.filmdash-button {
   position: relative;
   display: flex;
   justify-content: center;
@@ -12,25 +12,14 @@
   touch-action: manipulation;
 }
 
-.background-filmdash-button:after {
-  content: "";
-  font-family: "Limelight", serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 99.3%;
-  background-color:#bad2ddd3;
-  z-index: -1;
+.test-background-filmdash {
   position: absolute;
   height: 98.8%;
-  top: 4%;
-  left: 3%;
-  transition: 0.2s;
+  width: 99.3%;
+  background-color: #bad2ddd3;
+  z-index: -1;
+  transition: 0.2s ease;
+  top: 3.5%;
+  left: 2.5%;
   border-radius: 7px;
-}
-
-.background-filmdash-button:hover:after {
-  top: 0px;
-  left: 0.4%;
-  border-radius: 1.5%;
 }
