--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -34,7 +34,6 @@
 
 
 .filmdash-project h4 {
-  /* background-color: blue; */
   overflow: hidden;
   -webkit-text-stroke-width: 0.1px;
   -webkit-text-stroke-color: black;
@@ -46,22 +45,13 @@
   position: absolute;
   padding: 0;
   margin: 0;
-  font-size: 3em;
+  font-size: 4vw;
   color: #ffe372f0;
   text-transform: uppercase;
   letter-spacing: 0.3em;
-  width: 100%;
-  height: 100%;
   font-family: 'Yeseva One', sans-serif;
   font-family: "Limelight", serif;
   text-shadow: 2px 4px 10px rgba(0,0,0,0.2);
   transition: 0.2s;
   opacity: 50%;
-}
-
-.filmdash-project h4:hover {
-  scale: 1.1;
-  width: 91%;
-  height: 91%;
-  opacity: 1;
 }
