--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -47,6 +47,7 @@
   margin: 0;
   font-size: 4vw;
   color: #ffe372f0;
+  /* color: #ffe3729e; */
   text-transform: uppercase;
   letter-spacing: 0.3em;
   font-family: 'Yeseva One', sans-serif;
