no anoimation finally

--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -201,6 +201,14 @@
 
 /* Caroussel settings */
 
+.border-top {
+  position: absolute;
+}
+
+.border-left {
+  position: absolute;
+}
+
 .caroussel-container-filmdash {
   position: relative;
 
