--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -1,7 +1,7 @@
 .margin-nav {
   padding-top: 3%;
   padding-bottom: 3%;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .centered-nav {
@@ -19,4 +19,33 @@
 
 .topnav {
   width: 100%;
+  height: 15vh;
+}
+
+.navbar-portfolio {
+  background-color: var(--background-color);
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 10%;
+  height: 15vh;
+  position: fixed;
+  z-index: 10;
+  box-shadow: 0 4px 8px rgba(0,0,0,.1);
+}
+
+.navbar-portfolio a {
+  text-decoration: none;
+  color: var(--font-color);
+  /* background-color: aqua; */
+  display: flex;
+  align-items: center;
+  height: 100%;
+  transition: .2s ease-in-out;
+}
+
+.navbar-portfolio a:hover {
+  transform: scale(1.1);
 }
