--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -1,25 +1,6 @@
-.margin-nav {
-  padding-top: 3%;
-  padding-bottom: 3%;
-  z-index: 1;
-}
-
-.centered-nav {
-  /* background-color: aqua; */
-  justify-content: center;
-}
-
-.disposition {
-  /* background-color: red; */
-  width: 50%;
-  justify-content: space-between;
-  position: fixed;
-}
-
-
 .topnav {
   width: 100%;
-  height: 15vh;
+  height: 8vh;
 }
 
 .navbar-portfolio {
@@ -30,10 +11,10 @@
   align-items: center;
   text-align: center;
   gap: 10%;
-  height: 15vh;
+  height: 8vh;
   position: fixed;
   z-index: 10;
-  box-shadow: 0 4px 8px rgba(0,0,0,.1);
+  border-bottom: 1px var(--font-color) solid;
 }
 
 .navbar-portfolio a {
@@ -47,5 +28,6 @@
 }
 
 .navbar-portfolio a:hover {
-  transform: scale(1.1);
+  transform: scale(1.15);
+  color: #000000;
 }
