--- a/src/assets/bottom_bar.css
+++ b/src/assets/bottom_bar.css
@@ -1,7 +1,7 @@
 .bottom-bar {
   width: 100%;
   height: 8vh;
-  background-color: var(--border-project);
+  background-color: var(--background-color);
   position: absolute;
   top: 92vh;
   z-index: 2;
