--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -1,6 +1,8 @@
 .topnav {
   width: 100%;
   height: 8vh;
+  position: fixed;
+  z-index: 600;
 }
 
 .navbar-portfolio {
@@ -12,19 +14,20 @@
   text-align: center;
   gap: 10%;
   height: 8vh;
-  position: fixed;
-  z-index: 10;
-  border-bottom: 1px var(--font-color) solid;
+  /* box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px; */
 }
 
 .navbar-portfolio a {
   text-decoration: none;
   color: var(--font-color);
-  /* background-color: aqua; */
   display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   height: 100%;
+  width: 5%;
   transition: .2s ease-in-out;
+  /* background-color: rebeccapurple; */
 }
 
 .navbar-portfolio a:hover {
