--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -9,8 +9,10 @@
   text-align: center;
   gap: 7rem;
   height: 100%;
-  z-index: 15;
+  z-index: 800;
   position: fixed;
+  /* background-color: var(--background-color); */
+  /* box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px; */
 }
 
 .scroll-item {
@@ -19,7 +21,6 @@
   display: inline-block;
   letter-spacing: 0.6rem;
   font-size: 0.7em;
-  /* background-color: blue; */
 }
 
 .leftnav ul {
